--- a/shop/templates/input.html
+++ b/shop/templates/input.html
@@ -1,7 +1,7 @@
 <h1> SHOP </h1>
 {% load staticfiles %}
 <img src="{% static "image.jpg" %}" alt="Shop" height='400' width='600' />
-<form action= 'display/' method='post'> 
+<form action= '' method='post'> 
 {% csrf_token %}
    {{form.as_p}}
   <input type='submit' value='Boom'>
