--- a/shop/templates/display.html
+++ b/shop/templates/display.html
@@ -1,4 +1,10 @@
-<h1>Cost per {{item}}</h1>
-{{cost}}
-<h1>Total amount</h1>
-{{total}}
+<style>
+body
+{
+ background-color: #888888;
+}
+</style>
+<p style="color:black"><font size=6>Cost per {{item}}</font></p>
+<font size=5 color=darkblue>{{cost}}</font>
+<p style="color:black"><font size=6>Total amount</font></p>
+<font size=5 color=darkblue>{{total}}</font>
